<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Page Global -->
    <string name="titleHomePage"><h2>Direct Moyenne</h2></string>
    <string name="linkFormAdmin">Administrateur</string>
    <string name="linkFormStudent">Etudiant</string>
    <string name="btConnexion">CONNEXION</string>
    <string name="disconnectSession">SE DECONNECTER</string>
    <string name="titleHomePageAccount">Bienvenue sur votre espace </string>
    <string name="btConfirm">CONFIRMER</string>

    <!-- Page Formulaire Error -->
    <string name="titleErrorPage">Erreur d\'Authentification</string>
    <string name="txtError"><b>Désolé, le nom d\’utilisateur ou mot de passe est incorrecte.</b></string>
    <string name="linkReturnInitialForm"><u>Veuillez retourner au formulaire</u></string>

    <!-- Page Formulaire Etudiant -->
    <string name="txtStudentInput">Identifiant élève</string>
    <string name="txtStudentPassword">Mot de Passe</string>
    <string name="txtStudentPasswordMiss"><u>Mot de Passe oublié ?</u></string>

    <!-- Page Formulaire Administrateur -->
    <string name="txtAdminInput">Identifiant Administrateur</string>
    <string name="txtAdminPassword">Mot de Passe</string>

    <!-- Page Accueil Etudiant -->
    <string name="linkShowNote">Consulter vos notes</string>
    <string name="linkShowMoyenne">Consulter votre moyenne</string>
    <string name="linkPrintNote">Imprimer les notes et la moyenne</string>

    <!-- Page Consulter Note - Etudiant -->
    <!-- Page Voir Moyenne - Etudiant -->
    <string name="titleShowMoyenne"><b>Moyenne actuelle de </b></string>
    <string name="txtMoyenne">Moyenne</string>
    <string name="txtCommentaire">Commentaires</string>

    <!-- Pages Administrateur -->
    <string name="titleMainPageAdmin">Bienvenue sur votre espace</string>
    <string name="titleNote">Saisir une note</string>
    <string name="titleMatiere">Saisir une matière</string>
    <string name="titleStudent">Saisir un élève</string>
    <string name="modifNote">Modifier une note</string>
    <string name="titleCommentaire">Saisir un commentaire</string>
    <string name="newNote">Nouvelle note</string>
    <string name="newCommentaire">Ecrire le commentaire dans cette zone</string>
    <string name="newMatiere">Nouvelle matière</string>
    <string name="newMatiereCoef">Nouveau coefficient</string>
    <string name="newStudent">Nouvel élève</string>

    <!-- Global Parameters -->
    <string name="app_name">DirectMoyenne</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_form_administrator">Formulaire Administrateur</string>
    <string name="title_activity_form_student">Formulaire Etudiant</string>
    <string name="title_activity_consult_note_student">ConsultNoteStudent</string>
    <string name="title_activity_form_admin_saisir_note">FormAdminSaisirNote</string>
    <string name="title_activity_form_admin_menu">FormAdminMenu</string>
    <string name="title_activity_from_admin_saisir_matiere">FromAdminSaisirMatiere</string>
    <string name="title_activity_form_admin_saisir_eleve">FormAdminSaisirEleve</string>
    <string name="title_activity_form_admin_modifier_note">FormAdminModifierNote</string>

</resources>
