<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="esgi.directmoyenne.viewadmin.FormAdminMenu" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titleMainPageAdmin" />

    <Button
        android:id="@+id/modifNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/disconnect"
        android:layout_alignRight="@+id/disconnect"
        android:layout_below="@+id/newMatiere"
        android:layout_marginTop="22dp"
        android:text="@string/modifNote" 
        android:onClick="sendFormAdminModifNote"/>

    <Button
        android:id="@+id/newMatiere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/modifNote"
        android:layout_alignRight="@+id/modifNote"
        android:layout_centerVertical="true"
        android:text="@string/titleMatiere" 
        android:onClick="sendFormAdminSaisirMatiere"/>

    <Button
        android:id="@+id/newNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/newMatiere"
        android:layout_alignLeft="@+id/newMatiere"
        android:layout_alignRight="@+id/newMatiere"
        android:layout_marginBottom="20dp"
        android:text="@string/titleNote"
        android:onClick="sendFormAdminSaisirNote" />

    <Button
        android:id="@+id/newStudent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/newNote"
        android:layout_alignLeft="@+id/newNote"
        android:layout_alignRight="@+id/newNote"
        android:layout_marginBottom="17dp"
        android:text="@string/titleStudent"
        android:onClick="sendFormAdminSaisirEleve" />

    <Button
        android:id="@+id/disconnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/modifNote"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:text="@string/disconnectSession" />

</RelativeLayout>