<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="esgi.directmoyenne.forms.FormStudent" >

 	<TextView
        android:id="@+id/title_activity_form_student"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_form_student" />

    <EditText
        android:id="@+id/txtStudentInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/title_activity_form_student"
        android:layout_alignRight="@+id/btConfirm"
        android:layout_below="@+id/title_activity_form_student"
        android:layout_marginTop="69dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/txtStudentInput" />

    <EditText
        android:id="@+id/txtStudentPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtStudentInput"
        android:layout_alignRight="@+id/txtStudentInput"
        android:layout_below="@+id/txtStudentInput"
        android:layout_marginTop="70dp"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@string/txtStudentPassword" />

    <Button
        android:id="@+id/btConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtStudentPassword"
        android:layout_marginTop="100dp"
        android:onClick="confirmStudent"
        android:layout_toRightOf="@+id/title_activity_form_student"
        android:text="@string/btConfirm" />

</RelativeLayout>
